--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </ul>
             </div>
             <div class="search-bar">
-                <input id="search-text" type="text" class="news-input" placeholder="Search News">
+                <input id="search-text" type="text" class="news-input" placeholder="Search News ex.- janged">
                 <button id="search-button" class="search-button">Search</button>
             </div>
         </div>
